# statementDataExtraction

./: .gitignore  LICENSE  README.md  pyproject.toml  validate_extraction.py
docs/: functional_specification_document_fsd_defensive_income_statement_parser.md  technical_specification_document_tsd_defensive_income_statement_parser.md
notebooks/: test_deterministic_parser.ipynb
referenceMaterials/: high_level_flow_diagram.mmd  high_level_sequence_diagram.mmd
resources/markdown/: DEVELOPMENT_SUMMARY.md  EXTRACTION_SUMMARY.md
src/diagnostics/: analyze_pdf_coordinates.py  inspect_transaction.py
src/parsers/: deterministic_parser.py
