[project]
name = "income-statement-parser"
version = "0.1.0"
description = "Defensive Income Statement Parser (Maker–Checker)"
readme = "README.md"

requires-python = ">=3.11,<3.13"

# ============================================================
# Base Dependencies (Shared Across All Runtimes & Phases)
# ============================================================
#
# These are safe, deterministic, and non-automating primitives.
#

dependencies = [
    # PDF Processing (TSD §3, §4.1)
    # - Ingestion Guard: Text layer integrity checks, coordinate normalisation
    # - Deterministic Parser: Span merging, vector-based semantic inference
    # - Supports defensive parsing of hostile, semi-graphical PDFs
    "pymupdf>=1.24.5",

    # Validation Engine (TSD §3, §4.5; FSD FR-3)
    # - Arithmetic consistency checks
    # - Data manipulation for validation workflows
    "pandas>=2.2.0",
    "numpy>=1.26.4",

    # Configuration & Validation (TSD §3)
    # - Settings management for multi-phase deployments
    # - Schema validation support (Pydantic)
    "pydantic-settings>=2.2.1",
]

[dependency-groups]
# API Runtime (Phase 1+)
# - FastAPI-based ingestion, review, and orchestration layer (FSD §4.1, TSD §4.6)
# - Human Review Interface: Bounding box overlays, field-level correction
# - API handoff of approved data (FSD §4.1)
# - No vision, no LLM, no background execution (Phase 1 constraint)
api = [
    "fastapi>=0.110.0",          # Web framework for ingestion & review APIs
    "python-multipart>=0.0.9",   # PDF file upload handling (FR-1 Ingestion)
    "uvicorn[standard]>=0.30.0", # ASGI server for API runtime
]

# Worker Runtime (Phase 1+)
# - Background execution for heavy or blocking tasks (TSD §3)
# - Vision Parser Integration (TSD §4.4): External vision engine invocation
# - Supports hybrid parsing: Deterministic + Vision (FSD FR-2)
# - Remains non-autonomous (Phase 1 constraint)
worker = [
    "celery[redis]>=5.4.0",      # Async processing for vision parsing tasks
    "docling>=0.1.0",            # Vision-based document understanding (TSD §3, §4.4; FSD FR-2)
    "redis>=5.0.4",              # Message broker for Celery task queue
]

# LLM Augmentation (Phase 2+ ONLY)
# - Explicitly excluded from Phase 1 deployments
# - Used ONLY for schema normalisation, never primary extraction
# - Supports confidence-based decisioning enhancements (FSD FR-5)
llm = [
    "instructor>=1.4.0",         # Structured LLM outputs for schema normalisation
    "openai>=1.30.0",            # LLM provider for Phase 2+ augmentation
]

# Development & Test Tooling
# - Installed in local dev and CI only
# - Test Strategy: Unit tests per heuristic, integration tests per parsing path (TSD §7)
dev = [
    "httpx>=0.27.0",             # HTTP client for API integration testing
    "pytest>=8.2.0",             # Unit tests per heuristic (TSD §7)
    "pytest-asyncio>=0.23.6",   # Async test support for Celery/API tests
    "ruff>=0.4.0",               # Code quality and linting
    "ipykernel>=6.29.0",         # Jupyter kernel for notebook execution
    "jupyter>=1.0.0",            # Jupyter notebook support
    "pip>=24.0",                 # Package installer (required by some notebook tools)
]
